auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a3929998",
+   "id": "57565b17",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2afe8a",
+   "id": "f0bbed11",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc03dd6e",
+   "id": "3ee80bfe",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb9fe917",
+   "id": "c8b3c65b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee84b8a9",
+   "id": "fddf9d5f",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed39d76",
+   "id": "20712050",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "428a6d5a",
+   "id": "5d33e2b9",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e7b804e",
+   "id": "54ca0ee5",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1d0d6c",
+   "id": "343f1ec9",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16f06f38",
+   "id": "e1b368e8",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f773c056",
+   "id": "58a2419a",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -175,7 +175,7 @@
     "\n",
     "<a id='equation-equation13-1'></a>\n",
     "$$\n",
-    "\\mathbb E \\sum_{t=0}^{\\infty} \\beta^t u(c_t) \\tag{14.1}\n",
+    "\\mathbb E \\sum_{t=0}^{\\infty} \\beta^t u(c_t) \\tag{13.1}\n",
     "$$\n",
     "\n",
     "Here\n",
@@ -187,7 +187,7 @@
     "Consumption sequences enjoyed by households are affected by the government’s decision to borrow or\n",
     "lend internationally.\n",
     "\n",
-    "The government is benevolent in the sense that its aim is to maximize [(14.1)](#equation-equation13-1).\n",
+    "The government is benevolent in the sense that its aim is to maximize [(13.1)](#equation-equation13-1).\n",
     "\n",
     "The government is the only domestic actor with access to foreign credit.\n",
     "\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2be6289",
+   "id": "9b683518",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -227,7 +227,7 @@
     "\n",
     "<a id='equation-equation13-2'></a>\n",
     "$$\n",
-    "c = y + B - q(B', y) B' \\tag{14.2}\n",
+    "c = y + B - q(B', y) B' \\tag{13.2}\n",
     "$$\n",
     "\n",
     "Here and below, a prime denotes a next period value or a claim maturing next period.\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7165e249",
+   "id": "61ae7f62",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -263,7 +263,7 @@
     "\n",
     "<a id='equation-equation13-3'></a>\n",
     "$$\n",
-    "q = \\frac{1 - \\delta}{1 + r} \\tag{14.3}\n",
+    "q = \\frac{1 - \\delta}{1 + r} \\tag{13.3}\n",
     "$$\n",
     "\n",
     "Next we turn to how the government in effect chooses the default probability $ \\delta $."
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "630ac853",
+   "id": "15971084",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "742d3ea7",
+   "id": "1f5716e1",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb2e6ce",
+   "id": "c2829531",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -393,22 +393,22 @@
     "\n",
     "<a id='equation-equation13-4'></a>\n",
     "$$\n",
-    "\\delta(B', y) := \\int \\mathbb 1\\{v_c(B', y') < v_d(y') \\} p(y, y') dy' \\tag{14.4}\n",
+    "\\delta(B', y) := \\int \\mathbb 1\\{v_c(B', y') < v_d(y') \\} p(y, y') dy' \\tag{13.4}\n",
     "$$\n",
     "\n",
-    "Given zero profits for foreign creditors in equilibrium, we can combine [(14.3)](#equation-equation13-3) and [(14.4)](#equation-equation13-4)\n",
+    "Given zero profits for foreign creditors in equilibrium, we can combine [(13.3)](#equation-equation13-3) and [(13.4)](#equation-equation13-4)\n",
     "to pin down the bond price function:\n",
     "\n",
     "\n",
     "<a id='equation-equation13-5'></a>\n",
     "$$\n",
-    "q(B', y) = \\frac{1 - \\delta(B', y)}{1 + r} \\tag{14.5}\n",
+    "q(B', y) = \\frac{1 - \\delta(B', y)}{1 + r} \\tag{13.5}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db08d772",
+   "id": "29746452",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -428,12 +428,12 @@
     "- The three Bellman equations for $ (v_c(B, y), v_d(y), v(B,y)) $ are satisfied  \n",
     "- Given the price function $ q(B',y) $, the default decision rule and the asset accumulation\n",
     "  decision rule attain the optimal value function  $ v(B,y) $, and  \n",
-    "- The price function $ q(B',y) $ satisfies equation [(14.5)](#equation-equation13-5)  "
+    "- The price function $ q(B',y) $ satisfies equation [(13.5)](#equation-equation13-5)  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8efe92a0",
+   "id": "0edd866e",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a34c245",
+   "id": "3f379398",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
     "        self.y_grid = jax.device_put(y_grid)\n",
     "        self.P = jax.device_put(P)\n",
     "\n",
-    "        # Output recieved while in default, with same shape as y_grid\n",
+    "        # Output received while in default, with same shape as y_grid\n",
     "        self.def_y = jnp.minimum(def_y_param * jnp.mean(self.y_grid), self.y_grid)\n",
     "\n",
     "    def params(self):\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "961f955a",
+   "id": "68ecb029",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8513b2de",
+   "id": "4e635b34",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5552f357",
+   "id": "7123c40f",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d7bb34",
+   "id": "8d00154a",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5abcf0",
+   "id": "7a219d35",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1341b4f7",
+   "id": "7d0c832f",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4a2ab6",
+   "id": "cf9ab6fc",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abc309cf",
+   "id": "07598b74",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c712bc35",
+   "id": "29aebef4",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "138560e7",
+   "id": "29fc74a1",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5cdcf5d",
+   "id": "42537c5a",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b6d942",
+   "id": "2c481ba3",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cab0b5ed",
+   "id": "2c5c7ef1",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe333b48",
+   "id": "232011dd",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5fe379",
+   "id": "17632d94",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d6c8c7",
+   "id": "51706c61",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba4447c2",
+   "id": "1cc322ab",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e72f7a68",
+   "id": "d924688d",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3aea505",
+   "id": "1690f95a",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6fdf08",
+   "id": "299ecf26",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a820a34",
+   "id": "bd2ac077",
    "metadata": {
     "hide-output": false
    },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16ae958",
+   "id": "bc6c8741",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -985,7 +985,7 @@
     "\n",
     "\n",
     "We can use the results of the computation to study the default probability $ \\delta(B', y) $\n",
-    "defined in [(14.4)](#equation-equation13-4).\n",
+    "defined in [(13.4)](#equation-equation13-4).\n",
     "\n",
     "The next plot shows these default probabilities over $ (B', y) $ as a heat map.\n",
     "\n",
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc699a56",
+   "id": "8e79a688",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1019,10 +1019,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b326cfa",
+   "id": "23bfbc71",
    "metadata": {},
    "source": [
-    "## Exercise 14.1\n",
+    "## Exercise 13.1\n",
     "\n",
     "To the extent that you can, replicate the figures shown above\n",
     "\n",
@@ -1032,10 +1032,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e84ff73",
+   "id": "c30e3d11",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 14.1](https://jax.quantecon.org/#arellano_ex1)\n",
+    "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#arellano_ex1)\n",
     "\n",
     "Solution to this [exercise](https://python-advanced.quantecon.org/arellano.html#arella_ex1).\n",
     "\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effd1ca0",
+   "id": "f5922722",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8061fdfd",
+   "id": "7471b107",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f72aad",
+   "id": "bdaffc20",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5adfc04",
+   "id": "e1e55e4f",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3f98b43",
+   "id": "6136c439",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a8e192",
+   "id": "ab512a04",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9fd1af4",
+   "id": "edb0ea40",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b2bdd2",
+   "id": "d818aefb",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "261a4de4",
+   "id": "e333c80b",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92bf6eee",
+   "id": "e0ae7772",
    "metadata": {
     "hide-output": false
    },
@@ -1240,7 +1240,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989745.5900655,
+  "date": 1693975981.6917987,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
