--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "408a265f",
+   "id": "8d4fa41d",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d935a0ef",
+   "id": "078d0b82",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4d17fd",
+   "id": "2ea70fbd",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7c4bc05",
+   "id": "9231087c",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4bbba8",
+   "id": "90a91427",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94481e2d",
+   "id": "838e7e30",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c048c355",
+   "id": "8be8af2b",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b67f6e4",
+   "id": "f993e158",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b9058f",
+   "id": "fdd8d480",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b11d4b",
+   "id": "cc6ba814",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5706dcd",
+   "id": "2e4f0c42",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56479aeb",
+   "id": "65e2a099",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a902c05",
+   "id": "827cd12c",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -257,7 +257,7 @@
     "           [R (a - c) + \\hat Y, \\, \\hat Y]\n",
     "           \\, , \\;\n",
     "           u'(a)\n",
-    "     \\right\\} \\tag{13.1}\n",
+    "     \\right\\} \\tag{12.1}\n",
     "$$\n",
     "\n",
     "It [can be shown that](https://python.quantecon.org/ifp.html)\n",
@@ -271,9 +271,9 @@
     "The EGM is a technique for computing the update $ K\\sigma $ given $ \\sigma $ along a grid of asset values.\n",
     "\n",
     "Notice that, since $ u'(a) \\to \\infty $ as $ a \\downarrow 0 $, the second term in\n",
-    "the max in [(13.1)](#equation-eq-kaper) dominates for sufficiently small $ a $.\n",
+    "the max in [(12.1)](#equation-eq-kaper) dominates for sufficiently small $ a $.\n",
     "\n",
-    "Also, again using [(13.1)](#equation-eq-kaper), we have $ c=a $ for all such $ a $.\n",
+    "Also, again using [(12.1)](#equation-eq-kaper), we have $ c=a $ for all such $ a $.\n",
     "\n",
     "Hence, for sufficiently small $ a $,\n",
     "\n",
@@ -319,7 +319,7 @@
     "        \\right\\}\n",
     "               & \\text{if } a > \\bar a (y) \\\\\n",
     "            a  & \\text{if } a \\leq \\bar a (y)\n",
-    "    \\end{cases} \\tag{13.2}\n",
+    "    \\end{cases} \\tag{12.2}\n",
     "$$\n",
     "\n",
     "We begin with an *exogenous* grid of saving values $ 0 = s_0 < \\ldots < s_{N-1} $\n",
@@ -340,7 +340,7 @@
     "        \\beta R \\, \\mathbb E_y (u' \\circ \\sigma) \\,\n",
     "               [R s_i + \\hat Y, \\, \\hat Y]\n",
     "     \\right\\}\n",
-    "     \\quad \\text{for all } i \\tag{13.3}\n",
+    "     \\quad \\text{for all } i \\tag{12.3}\n",
     "$$\n",
     "\n",
     "and we set\n",
@@ -349,9 +349,9 @@
     "a_i = s_i + c_i\n",
     "$$\n",
     "\n",
-    "We claim that each pair $ a_i, c_i $ obeys [(13.2)](#equation-eq-oro).\n",
+    "We claim that each pair $ a_i, c_i $ obeys [(12.2)](#equation-eq-oro).\n",
     "\n",
-    "Indeed, since $ s_i > 0 $, choosing $ c_i $ according to [(13.3)](#equation-eq-kaperc) gives\n",
+    "Indeed, since $ s_i > 0 $, choosing $ c_i $ according to [(12.3)](#equation-eq-kaperc) gives\n",
     "\n",
     "$$\n",
     "c_i\n",
@@ -377,14 +377,14 @@
     "     \\quad \\text{and} \\quad a_i > \\bar a(y)\n",
     "$$\n",
     "\n",
-    "Hence [(13.2)](#equation-eq-oro) holds.\n",
+    "Hence [(12.2)](#equation-eq-oro) holds.\n",
     "\n",
     "We are now ready to iterate with $ K $."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "746a48bf",
+   "id": "7f2423ef",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "785b3fdb",
+   "id": "3c8404a1",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
    "source": [
     "def K_egm(a_in, σ_in, constants, sizes, arrays):\n",
     "    \"\"\"\n",
-    "    The vectorzied operator K using EGM.\n",
+    "    The vectorized operator K using EGM.\n",
     "\n",
     "    \"\"\"\n",
     "    \n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a89286",
+   "id": "96d69aa5",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dde75951",
+   "id": "26409f7f",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e0c0e8",
+   "id": "9b34df29",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "818d3e62",
+   "id": "d6dc0f74",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fda64d6",
+   "id": "027e0b56",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84121041",
+   "id": "a3057dcd",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0e84c96",
+   "id": "30af94f9",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edec999d",
+   "id": "672e37d3",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26340562",
+   "id": "b86d0840",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16ee863",
+   "id": "ae4fcaa6",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0fb1e9c",
+   "id": "7f04d550",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "169806ec",
+   "id": "126dd0cf",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021f4a6a",
+   "id": "54a7f3b1",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41f5f3f2",
+   "id": "64c43e50",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d1e735",
+   "id": "1305f0e1",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d36fa08",
+   "id": "16eb4b26",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abece5f6",
+   "id": "2713828e",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a56f5b7",
+   "id": "154fa6de",
    "metadata": {
     "hide-output": false
    },
@@ -809,18 +809,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb16cd0",
+   "id": "2990c816",
    "metadata": {},
    "source": [
     "### Timing\n",
     "\n",
-    "Now let’s compare excution time of the two methods"
+    "Now let’s compare execution time of the two methods"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf8ac487",
+   "id": "7d990515",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "710abe52",
+   "id": "94644829",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0654d1",
+   "id": "b6a1b746",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500e07d0",
+   "id": "3301ab0d",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +872,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989745.7689428,
+  "date": 1693975981.7706118,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
