--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2903f4b5",
+   "id": "3e5bb32c",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d97b4864",
+   "id": "a200a67f",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0cf20c6",
+   "id": "74a1aea0",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476edccb",
+   "id": "0388ef0f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f975e1c7",
+   "id": "c2247b2a",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e66ef4",
+   "id": "1df4c81a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac04a362",
+   "id": "94bcba7e",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7434a6d9",
+   "id": "222d8b8a",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773b73b5",
+   "id": "a398bac7",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1abf89a",
+   "id": "ac941296",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8e70ba",
+   "id": "f8751cee",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ecdd0fd",
+   "id": "9dcdf74b",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342691b9",
+   "id": "58d2cba6",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33242393",
+   "id": "f951ae00",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff29aa5",
+   "id": "555cdd87",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4bf5ae",
+   "id": "39cb219c",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1190102a",
+   "id": "a24d0cfc",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8112bcd",
+   "id": "310fcb8d",
    "metadata": {
     "hide-output": false
    },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8844849",
+   "id": "142af5bf",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66037870",
+   "id": "e5e78059",
    "metadata": {
     "hide-output": false
    },
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571fee97",
+   "id": "1c6723b0",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d235c914",
+   "id": "d45386f7",
    "metadata": {
     "hide-output": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8054458",
+   "id": "d59e3a9e",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d99fce3",
+   "id": "48539e49",
    "metadata": {
     "hide-output": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd64b9eb",
+   "id": "05130e25",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae8b4d5",
+   "id": "dc673f6b",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd80d43",
+   "id": "29eac998",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b945cd1d",
+   "id": "2e65dba8",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7481cbb",
+   "id": "c0a8bc00",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1a4cfd6",
+   "id": "c5debf75",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aeef5a6",
+   "id": "b0e04c1c",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "483ef37d",
+   "id": "d57153ed",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ae120f",
+   "id": "76eb4a44",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06acea31",
+   "id": "a4d2274c",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -552,10 +552,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbffe862",
+   "id": "7578fe76",
    "metadata": {},
    "source": [
-    "## Exercise 9.1\n",
+    "## Exercise 8.1\n",
     "\n",
     "We define a quadratic model for a single explanatory variable by\n",
     "\n",
@@ -568,10 +568,10 @@
     "\n",
     "<a id='equation-lambda-mle'></a>\n",
     "$$\n",
-    "\\lambda_t = \\exp(\\beta_0 + \\beta_1 x_t + \\beta_2 x_{t}^2) \\tag{9.1}\n",
+    "\\lambda_t = \\exp(\\beta_0 + \\beta_1 x_t + \\beta_2 x_{t}^2) \\tag{8.1}\n",
     "$$\n",
     "\n",
-    "Simulate the values of $ x_t $ by sampling from a normal distribution and $ \\lambda_t $ by using [(9.1)](#equation-lambda-mle) and the following constants:\n",
+    "Simulate the values of $ x_t $ by sampling from a normal distribution and $ \\lambda_t $ by using [(8.1)](#equation-lambda-mle) and the following constants:\n",
     "\n",
     "$$\n",
     "\\beta_0 = -2.5,\n",
@@ -581,7 +581,7 @@
     "    \\beta_2 = 0.5\n",
     "$$\n",
     "\n",
-    "Try to obtain the approximate values of $ \\beta_0,\\beta_1,\\beta_2 $, by simulating a Poission Regression Model such that\n",
+    "Try to obtain the approximate values of $ \\beta_0,\\beta_1,\\beta_2 $, by simulating a Poisson Regression Model such that\n",
     "\n",
     "$$\n",
     "y_t \\sim {\\rm Poisson}(\\lambda_t)\n",
@@ -597,10 +597,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8de054",
+   "id": "7d9ab44f",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#newton_mle1)\n",
+    "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#newton_mle1)\n",
     "\n",
     "Let’s start by defining “true” parameter values."
    ]
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f9809b3",
+   "id": "e0b4337b",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd2b3a5c",
+   "id": "13fb153a",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab07f5bd",
+   "id": "0eef214d",
    "metadata": {
     "hide-output": false
    },
@@ -644,16 +644,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c83b29",
+   "id": "435765b5",
    "metadata": {},
    "source": [
-    "We compute $ \\lambda $ using [(9.1)](#equation-lambda-mle)"
+    "We compute $ \\lambda $ using [(8.1)](#equation-lambda-mle)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36832b0b",
+   "id": "7f3d1e21",
    "metadata": {
     "hide-output": false
    },
@@ -664,16 +664,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deaf5ca7",
+   "id": "39b3843d",
    "metadata": {},
    "source": [
-    "Let’s define $ y_t $ by sampling from a Poission distribution with mean as $ \\lambda_t $."
+    "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a420fc74",
+   "id": "b5ec629e",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc8707ea",
+   "id": "38dcd82c",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119933a5",
+   "id": "65f341ab",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c519e0",
+   "id": "9567cd9b",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -722,7 +722,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989746.0842488,
+  "date": 1693975982.1552248,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
