--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83796596",
+   "id": "de54520a",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce5b747",
+   "id": "7b7a2f7f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb5d9ea",
+   "id": "be29e286",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe87da5b",
+   "id": "5f695a20",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6cf86b",
+   "id": "7e02eaaa",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f37aaebb",
+   "id": "857929c5",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1832e1d",
+   "id": "90988558",
    "metadata": {},
    "source": [
     "## The Equilibrium Problem\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5f739f",
+   "id": "169c8f13",
    "metadata": {},
    "source": [
     "### The Two Goods Market Equilibrium\n",
@@ -148,12 +148,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a35a47",
+   "id": "5890189f",
    "metadata": {},
    "source": [
     "### A High-Dimensional Version\n",
     "\n",
-    "Let’s now shift to a linear algebra formulation, which alllows us to handle\n",
+    "Let’s now shift to a linear algebra formulation, which allows us to handle\n",
     "arbitrarily many goods.\n",
     "\n",
     "The supply function remains unchanged,\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba57323a",
+   "id": "c82432cd",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f70adc0e",
+   "id": "80cf6753",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f250c2d5",
+   "id": "b3ef79fc",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09e91455",
+   "id": "21089fae",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0d09e9",
+   "id": "8871d27e",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc92138",
+   "id": "9bc616ee",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c218c8",
+   "id": "100f5cfd",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16af372",
+   "id": "f3671862",
    "metadata": {
     "hide-output": false
    },
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd85505d",
+   "id": "5203b949",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0aee94c",
+   "id": "4bfdb362",
    "metadata": {
     "hide-output": false
    },
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f05d1f19",
+   "id": "e009c9af",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b578dd91",
+   "id": "c4ba2a0b",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "750deb06",
+   "id": "679fb06f",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b34cb832",
+   "id": "70ac5b72",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af3c0ad",
+   "id": "595a30e7",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16498c53",
+   "id": "b058dc68",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a32bccb1",
+   "id": "a35820bd",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "312864ec",
+   "id": "b5e8fc96",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e16ad4",
+   "id": "294ad067",
    "metadata": {
     "hide-output": false
    },
@@ -494,16 +494,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53db9945",
+   "id": "de137494",
    "metadata": {},
    "source": [
-    "Then define the multivariate version of the formula for the [law of motion of captial](https://python.quantecon.org/newton_method.html#solow)"
+    "Then define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca83140",
+   "id": "72a6de74",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9371007",
+   "id": "f5f05cb3",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ad0d634",
+   "id": "4f4c8d66",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00484a3f",
+   "id": "297d7cb4",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "756781ab",
+   "id": "9cb99aa8",
    "metadata": {
     "hide-output": false
    },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec53f904",
+   "id": "4cd16777",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a351872d",
+   "id": "a421152a",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6c0b5d",
+   "id": "74bbf8dd",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a7075a6",
+   "id": "5d7a2d60",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc1e15e",
+   "id": "b98a8a77",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ea0e043",
+   "id": "7765da33",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eadd086",
+   "id": "e140c1e9",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ced7d732",
+   "id": "d488fd89",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f49c3153",
+   "id": "7f31bc36",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "181d1265",
+   "id": "0e711e17",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49f5d2dd",
+   "id": "9df94295",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63fb3fd5",
+   "id": "16b8791a",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3824a214",
+   "id": "61866a4d",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -767,7 +767,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989746.1225853,
+  "date": 1693975982.1940186,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
