--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c703959",
+   "id": "052d78f2",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5628f993",
+   "id": "f65f5a69",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "619df06f",
+   "id": "a0d0836c",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ed9f45",
+   "id": "1b6edc76",
    "metadata": {},
    "source": [
     "A monopolist faces inverse demand\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a5a38a2",
+   "id": "cde9e1d1",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "868e3f98",
+   "id": "c6b9a168",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fee1832",
+   "id": "c4e41613",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f174bde",
+   "id": "5092f998",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ebac7af",
+   "id": "47708574",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6dacb3",
+   "id": "4296e57e",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f2ae42",
+   "id": "428310b9",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bcea875",
+   "id": "32e40936",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10a23bb",
+   "id": "d3b68ce5",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2330c798",
+   "id": "c6ad1259",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1231475",
+   "id": "f2c51191",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464515da",
+   "id": "2e7bd3e0",
    "metadata": {},
    "source": [
     "Define a function to compute the current rewards given policy $ \\sigma $."
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d53b18c",
+   "id": "a42f1db6",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "866d36d9",
+   "id": "2311baeb",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bac733d0",
+   "id": "de01ec8f",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91101889",
+   "id": "c493ba11",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb63e247",
+   "id": "00db082e",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2331a2dc",
+   "id": "b7beb388",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f127bb",
+   "id": "b6334c55",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41bb4fef",
+   "id": "b6d50c26",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e66d6205",
+   "id": "6f2e8f1a",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "891e6c8d",
+   "id": "dc68d4c9",
    "metadata": {},
    "source": [
     "Define a function to get the value $ v_{\\sigma} $ of policy\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "facd19f4",
+   "id": "683432f6",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14573867",
+   "id": "3bc711b0",
    "metadata": {},
    "source": [
     "Now we define the solvers, which implement VFI, HPI and OPI."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b801a3cd",
+   "id": "ba696d37",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b27798",
+   "id": "b13a3874",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a37764",
+   "id": "e32818a2",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81918f8f",
+   "id": "28d40387",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c4619b",
+   "id": "5b99789e",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d507027f",
+   "id": "88c7936a",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4beee13e",
+   "id": "91698002",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "843d2fd2",
+   "id": "85686111",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f90585a9",
+   "id": "6d1b0caf",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be19550c",
+   "id": "e41319f5",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd2d983",
+   "id": "799bacfb",
    "metadata": {
     "hide-output": false
    },
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "526e4496",
+   "id": "ce29f220",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "624cf0ef",
+   "id": "c10e5ecc",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90eb57c",
+   "id": "2a1cfd36",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d75b8129",
+   "id": "6cdb2dc3",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989746.1567423,
+  "date": 1693975982.228073,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
