--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bd2729e7",
+   "id": "5ae7acfa",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b63fe1c0",
+   "id": "26619f89",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f41c0de",
+   "id": "43baeac3",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff94860",
+   "id": "f5bf4a89",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d12d3a",
+   "id": "235ca7b2",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad1bdf2",
+   "id": "7999e12c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0665c0",
+   "id": "af4da18d",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc365d3",
+   "id": "8a35db79",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5867e261",
+   "id": "3a88e7c0",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc3806e",
+   "id": "4e16ec6a",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3190ff8c",
+   "id": "da250d25",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d00624b8",
+   "id": "27d5c5f3",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13577579",
+   "id": "8f295f71",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d27f39f",
+   "id": "29a37b4e",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cf430ba",
+   "id": "f4c258ef",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56c0e445",
+   "id": "424f9165",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6473d0ce",
+   "id": "23ba26d0",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb2df42",
+   "id": "8137d066",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1f944e",
+   "id": "fbbbb98e",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eac1044",
+   "id": "9c69458c",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde70301",
+   "id": "e7cc5361",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d46f9556",
+   "id": "8f4e1f84",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2698befa",
+   "id": "dffa6bcd",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ab55d06",
+   "id": "437480c9",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ea516a7",
+   "id": "9c6203e1",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "782668d5",
+   "id": "f35f4913",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f819df9",
+   "id": "c5b23258",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce5eedb",
+   "id": "16681cac",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83fd66e7",
+   "id": "9f6b2736",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5547ec6f",
+   "id": "588f45b6",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08946464",
+   "id": "772912fa",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb91cd2",
+   "id": "0b370cd5",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d86eaa7d",
+   "id": "41951f4a",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cc30d68",
+   "id": "bc6e72e8",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f0f2ba6",
+   "id": "de5854cd",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dd410b0",
+   "id": "2f4fc3ce",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c328c42b",
+   "id": "62aedbca",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a1dad48",
+   "id": "7792bd00",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1434e7",
+   "id": "965939f0",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31c863cb",
+   "id": "92f55fea",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6387dddb",
+   "id": "905213bd",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50ad820",
+   "id": "519f9cd0",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e030f6",
+   "id": "08281be4",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5e80e6",
+   "id": "5097ba4c",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989746.190374,
+  "date": 1693975982.2620752,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
