--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2af5f423",
+   "id": "7e722b19",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc79b548",
+   "id": "66a6a5d7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcc7ef67",
+   "id": "17f192fc",
    "metadata": {
     "hide-output": false
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6084f736",
+   "id": "862801ff",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95cd8a2c",
+   "id": "418898db",
    "metadata": {
     "hide-output": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42ddd5d1",
+   "id": "df41c55c",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09470260",
+   "id": "c7f8ae72",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17ee8505",
+   "id": "93083356",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15545459",
+   "id": "93696bbd",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06ab28c1",
+   "id": "2b882a8d",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "380bcffd",
+   "id": "ec0b3246",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4db1391",
+   "id": "c928a441",
    "metadata": {
     "hide-output": false
    },
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4ab0be0",
+   "id": "c104c187",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaa54380",
+   "id": "24952f59",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdb854e2",
+   "id": "86a21fde",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6baa3a99",
+   "id": "e533f3bd",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f48f9266",
+   "id": "84a7a5d9",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eba13bb",
+   "id": "4b12d762",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba0aef10",
+   "id": "08849d46",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ec49a5",
+   "id": "e840de46",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ac5f630",
+   "id": "0b03499c",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ade9f2bc",
+   "id": "ab7da16e",
    "metadata": {
     "hide-output": false
    },
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36665ea0",
+   "id": "0b7e9ed2",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ac9e325",
+   "id": "860ff5f9",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6626dcb2",
+   "id": "38107317",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -352,7 +352,7 @@
     "\n",
     "<a id='equation-wealth-dynam-ah'></a>\n",
     "$$\n",
-    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{8.1}\n",
+    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{7.1}\n",
     "$$\n",
     "\n",
     "where\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c37243d",
+   "id": "81ba9b4e",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7cf36b2",
+   "id": "474f3d9a",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a83c51",
+   "id": "f447bd89",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "774dbb51",
+   "id": "12e4abef",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3292107d",
+   "id": "8f26ec13",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1348c6a",
+   "id": "22106c1c",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96e2788b",
+   "id": "a7a85cfd",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1fbfea2",
+   "id": "1a284b52",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1db4ddc",
+   "id": "7535bf27",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def75a4a",
+   "id": "db3dc4e9",
    "metadata": {
     "hide-output": false
    },
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b889cdc3",
+   "id": "601731fa",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14f768a",
+   "id": "e15085c7",
    "metadata": {
     "hide-output": false
    },
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa97d924",
+   "id": "caec582e",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99a874b8",
+   "id": "28d82ded",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd9f496",
+   "id": "80237962",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64a104a8",
+   "id": "07fca838",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "799a61d5",
+   "id": "018508bd",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ae04006",
+   "id": "c09aa9e5",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69705d54",
+   "id": "fbc8a73b",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bbf77b7",
+   "id": "34b5563a",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfbb9d0b",
+   "id": "92e62db1",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1808e267",
+   "id": "b8657d7f",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe28d567",
+   "id": "0047202c",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97341931",
+   "id": "0c335698",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caa2573c",
+   "id": "bfe00e8b",
    "metadata": {
     "hide-output": false
    },
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60c9495d",
+   "id": "604d7f5d",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8776620a",
+   "id": "1e475162",
    "metadata": {
     "hide-output": false
    },
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dae376d",
+   "id": "140d4b5d",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dbc8e69",
+   "id": "dc07f221",
    "metadata": {
     "hide-output": false
    },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0963cdc",
+   "id": "681d7c47",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2e024ce",
+   "id": "882dfd50",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "773d4c65",
+   "id": "7f942d4a",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b7e4e0e",
+   "id": "f431e7b7",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -907,10 +907,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc42db2",
+   "id": "8b35ae43",
    "metadata": {},
    "source": [
-    "## Exercise 8.1\n",
+    "## Exercise 7.1\n",
     "\n",
     "For a wealth or income distribution with Pareto tail, a higher tail index suggests lower inequality.\n",
     "\n",
@@ -932,10 +932,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0067b42a",
+   "id": "07171ba6",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#wd_ex1)\n",
+    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
     "\n",
     "Here is one solution, which produces a good match between theory and\n",
     "simulation."
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05848cfc",
+   "id": "215ee5ff",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f47a410",
+   "id": "2892d8f8",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -981,17 +981,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f69cb51a",
+   "id": "fc148d72",
    "metadata": {},
    "source": [
-    "## Exercise 8.2\n",
+    "## Exercise 7.2\n",
     "\n",
     "When savings is constant, the wealth process has the same quasi-linear\n",
     "structure as a Kesten process, with multiplicative and additive shocks.\n",
     "\n",
     "The Kesten–Goldie theorem tells us that Kesten processes have Pareto tails under a range of parameterizations.\n",
     "\n",
-    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(8.1)](#equation-wealth-dynam-ah) are not IID.\n",
+    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(7.1)](#equation-wealth-dynam-ah) are not IID.\n",
     "\n",
     "At the same time, given the similarities, perhaps Pareto tails will arise.\n",
     "\n",
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a980a4b0",
+   "id": "42ad0617",
    "metadata": {
     "hide-output": false
    },
@@ -1020,10 +1020,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be8acc78",
+   "id": "4d05383e",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 8.2](https://jax.quantecon.org/#wd_ex2)\n",
+    "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
     "\n",
     "First let’s generate the distribution:"
    ]
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd4ca44",
+   "id": "865953f7",
    "metadata": {
     "hide-output": false
    },
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db255c7c",
+   "id": "8859d05a",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f49dad",
+   "id": "2a96b5b3",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b6584e",
+   "id": "675a7186",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a9338e",
+   "id": "5b96183a",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1100,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989746.404032,
+  "date": 1693975982.3618813,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
