--- a/status.ipynb
+++ b/status.ipynb
@@ -2,34 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54f5e9c7",
+   "id": "105ce215",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
     "\n",
     "This table contains the latest execution statistics.\n",
     "\n",
-    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
+    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2023-08-14 03:58|cache|60.76|✅|\n",
-    "|arellano|2023-08-14 03:59|cache|35.94|✅|\n",
-    "|cake_eating_numerical|2023-08-14 03:59|cache|24.03|✅|\n",
-    "|ifp_egm|2023-08-14 04:00|cache|75.06|✅|\n",
-    "|intro|2023-08-14 04:00|cache|4.02|✅|\n",
-    "|inventory_dynamics|2023-08-14 04:06|cache|369.16|✅|\n",
-    "|inventory_ssd|2023-08-14 04:34|cache|1630.75|✅|\n",
-    "|jax_intro|2023-08-14 04:34|cache|50.69|✅|\n",
-    "|kesten_processes|2023-08-14 04:35|cache|30.03|✅|\n",
-    "|markov_asset|2023-08-14 04:35|cache|25.03|✅|\n",
-    "|mle|2023-08-14 04:36|cache|20.03|✅|\n",
-    "|newtons_method|2023-08-14 04:39|cache|164.65|✅|\n",
-    "|opt_invest|2023-08-14 04:42|cache|187.75|✅|\n",
-    "|opt_savings|2023-08-14 04:43|cache|63.04|✅|\n",
-    "|short_path|2023-08-14 04:43|cache|10.0|✅|\n",
-    "|status|2023-08-14 04:43|cache|4.01|✅|\n",
-    "|troubleshooting|2023-08-14 04:00|cache|4.02|✅|\n",
-    "|wealth_dynamics|2023-08-14 04:44|cache|34.01|✅|\n",
-    "|zreferences|2023-08-14 04:00|cache|4.02|✅|\n",
+    "|aiyagari_jax|2023-09-04 02:52|cache|59.13|✅|\n",
+    "|arellano|2023-09-04 02:53|cache|36.03|✅|\n",
+    "|cake_eating_numerical|2023-09-04 02:53|cache|22.87|✅|\n",
+    "|ifp_egm|2023-09-04 02:54|cache|71.63|✅|\n",
+    "|intro|2023-09-04 02:54|cache|1.37|✅|\n",
+    "|inventory_dynamics|2023-09-04 03:00|cache|353.16|✅|\n",
+    "|jax_intro|2023-09-04 03:28|cache|48.69|✅|\n",
+    "|kesten_processes|2023-09-04 03:28|cache|29.03|✅|\n",
+    "|markov_asset|2023-09-04 03:29|cache|23.03|✅|\n",
+    "|mle|2023-09-04 03:29|cache|20.98|✅|\n",
+    "|newtons_method|2023-09-04 03:32|cache|164.09|✅|\n",
+    "|opt_invest|2023-09-04 03:35|cache|178.84|✅|\n",
+    "|opt_savings|2023-09-04 03:36|cache|54.69|✅|\n",
+    "|short_path|2023-09-04 03:36|cache|12.03|✅|\n",
+    "|status|2023-09-04 03:36|cache|3.95|✅|\n",
+    "|troubleshooting|2023-09-04 02:54|cache|1.37|✅|\n",
+    "|wealth_dynamics|2023-09-04 03:36|cache|35.03|✅|\n",
+    "|zreferences|2023-09-04 02:54|cache|1.37|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -42,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b2f5a1",
+   "id": "84daab8f",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa0017c5",
+   "id": "51ccc321",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -64,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be9808b4",
+   "id": "cba47e4c",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +74,7 @@
   }
  ],
  "metadata": {
-  "date": 1691989746.2400897,
+  "date": 1693975982.3113854,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
